# part-1

./: 00. Informazioni Generali.ipynb  01. Informatica ed Elaboratore.ipynb  02. Architettura dell'Elaboratore.ipynb  03. Sistema Operativo.ipynb  cleanup.sh  print-pdf.sh  pyproject.toml
