[tool.poetry]
name = "part-1"
version = "0.1.0"
description = ""
authors = ["Michele Lombardi <michele.lombardi2@unibo.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
notebook = "6.5.6"
numpy = "^2.2.2"
scipy = "^1.15.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
